# mcp-vods

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: claude.yaml  opencode.yaml
mcp_vods/: __init__.py  mitv.py  moon.py  vods.py
